fix(style): set fixed scrollbar width to align affected elements

--- a/src/styles.css
+++ b/src/styles.css
@@ -12,17 +12,32 @@
     --color-800: #110fc8;
     --color-900: #110fa9;
     --color-950: #06096f;
+
+    --width-scroll: 0.5rem;
 }
 
 * { 
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    scrollbar-width: thin;
-    scrollbar-color: #bbbbbb transparent;
+    /* scrollbar-width: thin; */
+    /* scrollbar-color: #bbbbbb transparent; */
 }
 
 body {
     font-family: 'Onest Variable', sans-serif;
     color: var(--color-950);
+}
+
+::-webkit-scrollbar {
+    width: var(--width-scroll);
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #bbbbbb;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: transparent;
 }
